syntax = "proto3";

package product;

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "jp.inaba.grpc.product";

service CreateProduct {
  rpc handle (CreateProductRequest) returns (google.protobuf.Empty);
}

message CreateProductRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  string imageUrl = 4;
  int32 price = 5;
}